# KUI

./: README.md  cosica.py  prueba.py  pyproject.toml  styles.css
kuiapp/: KUIApp.py  __init__.py  _linux_driver.py  app.py  commands.py  config.py  plots
kuiapp/widgets/: __init__.py  _button.py  _directory_tree.py  _footer.py  _header.py  _placeholder.py  _scroll_view.py  _static.py  _tree_control.py
