[tool.poetry]
name = "kuiapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.taskipy.tasks]
kuiapp = "textual run kuiapp/KUIApp.py"

[tool.poetry.dependencies]
python = "^3.7"
rich = "*"
textual = "^0.5"
typing-extensions = "*"
taskipy = "*"

[tool.poetry.dev-dependencies]

pytest = "^6.2.3"
black = "^20.8b1"
mypy = "^0.910"
pytest-cov = "^2.12.1"
mkdocs = "^1.2.1"
mkdocstrings = "^0.15.2"
mkdocs-material = "^7.1.10"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
